--- a/style.css
+++ b/style.css
@@ -93,14 +93,14 @@ button.cart img{
 button.cart:hover{
     background-color: hsl(158, 36%, 20%);
 }
-@media screen and (max-width:300px) and (max-width:700px){
+@media screen and (min-width:300px) and (max-width:700px){
     
         .con{
             margin: 15px auto;
             padding: 0 15px;
         }
         .grid{
-            grid-template-row: 1fr;
+            grid-template-columns: 1fr;
         }
         .card img{
             max-height: 290px;
