--- a/style.css
+++ b/style.css
@@ -100,7 +100,8 @@ button.cart:hover{
             padding: 0 15px;
         }
         .grid{
-            grid-template-columns: 1fr; 
+            grid-template-columns: 1fr;
+            width:325px;
         }
         .card img{
             max-height: 290px;
