--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ button.cart:hover{
         }
         .grid{
             grid-template-columns: 1fr;
-            max-width:325px;
+            
         }
         .card img{
             max-height: 290px;
@@ -115,6 +115,18 @@ button.cart:hover{
         h2, h1.hh, p.detail, .price{
             padding-bottom: 16px;
         }
-        
+        h1.hh{
+            font-size:34px;
+         }
+         p.detail{
+            font-size:12px; 
+         }
+         .price{
+            font-size:23px; 
+         }
+         button.cart{
+             padding:12px 0;
+            font-size:13px; 
+         }
        
 }
