--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ h2{
     align-items: center;
 }
 p.np{
-     font-family:"Montserrat";
+    font-family:"Fraunces";
     font-optical-sizing: auto;
     font-style: "normal";
     font-size: 25px;
